--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
   "devDependencies": {
     "electron": "^4.1.4",
     "electron-packager": "^9.0.1",
-    "electron-rebuild": "^1.8.4"
+    "electron-rebuild": "latest"
   }
 }
