--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "devDependencies": {
     "electron": "^4.1.4",
-    "electron-packager": "^9.0.1",
-    "electron-rebuild": "latest"
+    "electron-packager": "^13.1.1",
+    "electron-rebuild": "*"
   }
 }
